fix: prevent 500 error in post list by sorting images with non-null imageOrder